<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal|center_vertical"
        android:id="@+id/login_layout_frame"
>


    <android.support.v7.widget.CardView
            android:id="@+id/layout_atas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

            <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    app:srcCompat="@drawable/m_bprsbaktimakmur"
                    android:contentDescription="@string/todo"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"/>

            <android.support.design.widget.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/txt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_username"
                        android:inputType="text"
                        android:textSize="18sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/txt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_password"
                        android:inputType="textPassword"
                        android:textSize="18sp"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/btn_gradient"
                    android:gravity="center_vertical|center_horizontal|center"
                    android:padding="12dp"
                    android:text="@string/text_login"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    tools:textAllCaps="false"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <TextView
            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_atas"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/text_create_akun"
            android:textSize="16sp"/>

    <TextView
            android:visibility="gone"
            android:id="@+id/link_settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/link_signup"
            android:gravity="center"
            android:text="@string/settings"
            android:textSize="16sp"/>

    <TextView
            android:visibility="gone"
            android:id="@+id/login_error_msg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/link_settings"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:text="Login Error. Please Try Again"
            android:textColor="#77ff0000"
            android:textSize="16sp"/>

</RelativeLayout>


