<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PinActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/new_mitrasoft"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="25dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/appBarLayout"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/keteranganTrf"
                android:visibility="gone"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_info"
                    android:layout_below="@+id/keteranganTrf"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="left|center"
                    android:text="@string/text_info_trf"
                    android:textColor="@color/hitam"
                    android:textSize="@dimen/home_text_16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_keterangan_trf"
                    android:layout_below="@+id/keteranganTrf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="left|center"
                    android:text="@string/text_info_trf"
                    android:textColor="@color/hitam"
                    android:textSize="@dimen/home_text_16dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_header"
                android:layout_below="@+id/keteranganTrf"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="left|center"
                android:text="@string/text_masukkan_pin"
                android:textColor="@color/hitam"
                android:textSize="@dimen/home_text_16dp"
                android:textStyle="bold" />

            <TextView
                android:gravity="right|center"
                android:layout_below="@+id/keteranganTrf"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/todo"
                android:drawableStart="@drawable/ic_security"
                android:drawableLeft="@drawable/ic_security"
                android:padding="10dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_below="@+id/text_header"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="12dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtPIN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="20"
                    android:digits="1234567890"
                    android:maxLength="6"
                    android:inputType="numberPassword"
                    android:singleLine="true"
                    android:gravity="center"
                    android:textSize="18sp"/>
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:columnCount="2"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:rowCount="1">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_gradient"
            android:gravity="center_vertical|center_horizontal|center"
            android:padding="12dp"
            android:text="@string/text_batal"
            android:textColor="@color/cardview_light_background"
            android:textSize="18dp"
            android:textStyle="normal"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            tools:textAllCaps="false" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@drawable/btn_gradient"
            android:gravity="center_vertical|center_horizontal|center"
            android:padding="12dp"
            android:text="@string/text_lanjut"
            android:textColor="@color/cardview_light_background"
            android:textSize="18dp"
            android:textStyle="normal"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            tools:textAllCaps="false" />
    </android.support.v7.widget.GridLayout>

</android.support.constraint.ConstraintLayout>